# RootAsRole-capable

./: .dir-locals.el  .gitignore  Cargo.toml  README.md
capable/: Cargo.toml  build.rs
capable-common/: Cargo.toml
capable-common/src/: lib.rs
capable-ebpf/: Cargo.toml  build.rs
capable-ebpf/src/: capable.rs  ebpf_util.rs  main.rs  vmlinux.rs
capable/src/: bus.rs  main.rs  strace.pest  strace.rs  syscalls.rs  version.rs
xtask/: Cargo.toml
xtask/src/: build_ebpf.rs  main.rs  run.rs
