[package]
name = "capable-ebpf"
# The project version is managed on json file in resources/rootasrole.json
version = "3.0.0"
edition = "2021"

[dependencies]
aya-ebpf = { git = "https://github.com/aya-rs/aya" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya" }
capable-common = { path = "../capable-common", features = ["kernel"] }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "capable"
path = "src/main.rs"
test = false

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
