[package]
name = "capable"
# The project version is managed on json file in resources/rootasrole.json
version = "3.0.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya" }
capable-common = { path = "../capable-common", features = ["user"] }
anyhow = "1.0.86"
env_logger = "0.11.3"
libc = "0.2.155"
log = "0.4.21"
tabled = "0.15.0"
capctl = "0.2.3"
nix = { version = "0.29.0", features = ["user", "signal", "sched", "ptrace"] }
shell-words = "1.1.0"
serde = { version = "1.0.203", features=["rc", "derive"] }
serde_json = "1.0.117"
unshare = { version = "0.7.0" }
lazy_static = "1.5.0"
syslog-tracing = "0.3.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
bitflags = "2.6.0"
pest = "2.7.13"
pest_derive = "2.7.13"
dbus = "0.9.7"
signal-hook = "0.3.17"
dashmap = "6.1.0"

[build-dependencies]
aya = { git = "https://github.com/aya-rs/aya" }
aya-build = { workspace = true }
anyhow = { workspace = true }

[[bin]]
name = "capable"
path = "src/main.rs"
